<resources>
    <string name="app_name">Lista zakupow</string>
    <string name="action_settings">Settings</string>
    <string name="appTitle">Lista zakupów</string>
    <string name="startButtonMainMenuText">START</string>
    <string name="settingsMainMenuButtonText">USTAWIENIA</string>
    <string name="aboutAuthorMainMenuButtonText">O AUTORZE</string>
    <integer name="delay">300</integer>
    <integer name="lightblue">0xFF7ec0ee</integer>
    <integer name="lightgrey">0xFF606060</integer>
    <string name="title_activity_about">AboutActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="goBackButtonText">WSTECZ</string>
    <string name="exitButtonText">WYJDŹ</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="addText">DODAJ</string>
    <string name="readyString">GOTOWE</string>
    <string name="readyButtonText">GOTOWE</string>
    <string name="editButtonText">EDYTUJ</string>
    <string name="saveButtonText">ZAPISZ</string>
    <string name="cancelButtonText">ANULUJ</string>
    <string name="pusheenedit">pusheenedit</string>
    <string name="removeButtonText">USUŃ</string>
</resources>
