<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.tiger.listazakupow.MainActivity"
    android:id="@+id/activity_main"
    android:background="#FFFFFF">

    <Button
        style="@style/mainmenubutton"
        android:layout_height="31dp"
        android:text="@string/exitButtonText"
        android:id="@+id/exitButton"
        android:layout_width="68dp"
        android:layout_gravity="right" />

    <TextView
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/appTitle"
        android:id="@+id/appTitle"
        style="@style/appTitle"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/pusheeneating"
        android:contentDescription="pusheeneating"
        android:layout_marginBottom="80dp"/>

    <Button
        android:layout_height="wrap_content"
        android:text="@string/startButtonMainMenuText"
        android:id="@+id/startButton"
        style="@style/mainmenubutton"
        />

    <Button
        android:layout_height="wrap_content"
        android:text="@string/aboutAuthorMainMenuButtonText"
        android:id="@+id/aboutButton"
        style="@style/mainmenubutton"/>

</LinearLayout>
