<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="#FFFFFFFF"
    android:weightSum="1">

    <ImageView
        android:layout_width="156dp"
        android:layout_height="155dp"
        android:background="@drawable/pusheenedit"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/pusheenedit" />

    <EditText
        android:layout_width="match_parent"
        android:layout_marginTop="50dp"
        android:layout_height="40dp"
        android:maxWidth="@dimen/activity_horizontal_margin"
        android:id="@+id/editText"
        android:textAlignment="center" />
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.tiger.listazakupow.ListingActivity"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:background="#FFFFFFFF">
        <Button
            style="@style/mainmenubutton"
            android:layout_height="wrap_content"
            android:text="@string/saveButtonText"
            android:id="@+id/savebutton"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal" />
        <Button
            style="@style/mainmenubutton"
            android:layout_height="wrap_content"
            android:text="@string/cancelButtonText"
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>
</LinearLayout>