<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.tiger.listazakupow.ListingActivity"
    android:orientation="vertical"
    android:background="#FFFFFF">

    <Button
        style="@style/mainmenubutton"
        android:layout_height="wrap_content"
        android:text="@string/goBackButtonText"
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_marginBottom="60dp"
        android:layout_gravity="center_horizontal" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:background="@drawable/pusheenmain"
        android:layout_gravity="center_horizontal"
        />
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.tiger.listazakupow.ListingActivity"
        android:orientation="horizontal"
        android:background="#FFFFFF"
        android:layout_gravity="center_horizontal"
        android:gravity="center">
        <Button
            style="@style/mainmenubutton"
            android:layout_height="wrap_content"
            android:text="@string/removeButtonText"
            android:id="@+id/removeButton"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal" />
        <Button
            style="@style/mainmenubutton"
            android:layout_height="wrap_content"
            android:text="@string/editButtonText"
            android:id="@+id/editButton"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>
    <LinearLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="0px"
        android:layout_height="0px"/>
    <ListView
            android:id="@+id/listShopping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            android:layout_marginBottom="30dp"
            android:padding="1dp"
            >
    </ListView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/addText"
            style="@style/mainmenubutton"
            android:id="@+id/addItem"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:maxWidth="@dimen/activity_horizontal_margin"
            android:id="@+id/textItem"/>
    </LinearLayout>

</LinearLayout>
